@@ -45,3 +45,4 @@
 2014-10-15  34  Bookmark Linking support in BMEditDlg complete and working. Added QuickBMSelDlg.
 2014-10-26  39  BMViewDlg shows linked bookmarks
 2014-10-27  40  Introduced BookmarkExtraInfo tables and UI and initial code.
+2014-10-29  42  Bookmark Extra Info adding, viewing, editing, etc all done.
